Add Newsbox Setup & Header + Nav

--- a/index.html
+++ b/index.html
@@ -1,1 +1,79 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/9b6654b16d.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/css/index.css">
+    <title>Newsbox</title>
+</head>
+<body>
+    <header id="header" class="header">
+        <i class="fas fa-inbox header__archive-button"></i>
+        <p class="header__title">Newsbox</p>
+        <i class="fas fa-cog header__settings-button"></i>
+    </header>
+    <hr style="opacity: 50%;">
 
+    <nav id="nav" class="navigation">
+        <form class="navigation__searchbar" method="GET">
+            <input type="text" class="searchbar" id="searchbar" placeholder="Search news">
+            <i class="fas fa-search searchicon"></i>
+        </form>
+    </nav>
+    <hr style="opacity: 30%;">
+
+    <section class="category">
+        <div class="category__container">
+            <i class="fab fa-neos category__icon"></i>
+            <p class="category__title">HEALTH</p>
+            <div class="category__angle-icon">
+                <i class="fas fa-angle-right angle__icon"></i>
+            </div>
+        </div>
+    </section>
+    <hr style="opacity: 30%;">
+    <section class="category__items">
+        <div class="item__1-title">
+            <p>Headline</p>
+        </div>
+        <article class="category__article">
+            <img class="item__image" src="/Assets/Images/105-1057578_n-blem-logo-png-transparent-logo-de-una.png" alt="">
+            <p class="article__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </article>
+    </section>
+    <hr style="opacity: 30%;">
+    <section class="category__items">
+        <div class="item__1-title">
+            <p>Headline</p>
+        </div>
+        <article class="category__article">
+            <img class="item__image" src="/Assets/Images/105-1057578_n-blem-logo-png-transparent-logo-de-una.png" alt="">
+            <p class="article__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </article>
+    </section>
+    <hr style="opacity: 30%;">
+
+    <section class="category">
+        <div class="category__container">
+            <i class="fab fa-neos category__icon"></i>
+            <p class="category__title">SPORT</p>
+            <div class="category__angle-icon">
+                <i class="fas fa-angle-right angle__icon"></i>
+            </div>
+        </div>
+    </section>
+    <hr style="opacity: 30%;">
+    <section class="category__items">
+        <div class="item__1-title">
+            <p>Headline</p>
+        </div>
+        <article class="category__article">
+            <img class="item__image" src="/Assets/Images/105-1057578_n-blem-logo-png-transparent-logo-de-una.png" alt="">
+            <p class="article__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </article>
+    </section>
+
+</body>
+</html>
