Add Settings & Frontpage Changes

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <section class="category">
             <div class="category__container">
                 <i class="fab fa-neos category__icon"></i>
-                <article class="category__title">HEALTH</article>
+                <article class="category__title">WORLD</article>
                 <div class="category__angle-icon">
                     <i class="fas fa-angle-right angle__icon"></i>
                 </div>
@@ -37,7 +37,7 @@
         </section>
         <hr style="opacity: 30%;">
         
-        <section class="category__items">
+        <!-- <section class="category__items">
             <div class="item__1-title">
                 <p>Headline</p>
             </div>
@@ -78,9 +78,10 @@
                 <img class="item__image" src="/Assets/Images/105-1057578_n-blem-logo-png-transparent-logo-de-una.png" alt="">
                 <p class="article__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
             </article>
-        </section>
+        </section> -->
 
     </main>
 <script src="/Common-Blocks/Frontpage/Category-Section/Javascript/fetch.js"></script>
+<script src="/Common-Blocks/Frontpage/Category-Section/Javascript/interaction.js"></script>
 </body>
 </html>
