Add Newsbox Update

--- a/Common-Blocks/Settings/settings.html
+++ b/Common-Blocks/Settings/settings.html
@@ -23,7 +23,7 @@
         <section class="categoryBox">
             <section id="section" class="categoryContainer">
                 <!-- <div class="category">
-                    <h2 class="category__title">Heading</h2>
+                    <h2 class="categoryTitle">Heading</h2>
                     <button class="category__button">
                         <div class="category__circle"></div>
                     </button>
