--- a/index.html
+++ b/index.html
@@ -27,18 +27,20 @@
     <hr style="opacity: 30%;">
 
     <main>
-        <section class="category">
-            <div class="category__container">
-                <i class="fab fa-neos category__icon"></i>
-                <article class="category__title">WORLD</article>
-                <div class="category__angle-icon">
-                    <i class="fas fa-angle-right angle__icon"></i>
+        <!-- <section class="sectionContainer">
+            <section class="category">
+                <div class="category__container">
+                    <i class="fab fa-neos category__icon"></i>
+                    <article class="category__title-front">WORLD</article>
+                    <div class="category__angle-icon">
+                        <i class="fas fa-angle-right angle__icon"></i>
+                    </div>
                 </div>
-            </div>
-        </section>
-        <hr style="opacity: 30%;">
-        <div id="link">
-            <!-- <section class="category__items">
+            </section>
+            <hr style="opacity: 30%;">
+        </section> -->
+        <!-- <div id="link">
+             <section class="category__items">
                 <div class="item__1-title">
                     <p>Headline</p>
                 </div>
@@ -48,7 +50,7 @@
                 </article>
             </section>
             <!-->
-        </div>
+        <!-- </div>  -->
         
         <!-- <hr style="opacity: 30%;">
     
